--- a/views/res_config_settings_views.xml
+++ b/views/res_config_settings_views.xml
@@ -3,7 +3,7 @@
     <record id="view_res_config_settings_monta" model="ir.ui.view">
         <field name="name">res.config.settings.view.form.monta</field>
         <field name="model">res.config.settings</field>
-        <field name="inherit_id" ref="base.view_res_config_settings"/>
+        <field name="inherit_id" ref="base_setup.view_res_config_settings"/>
         <field name="arch" type="xml">
             <xpath expr="//div[@id='settings']" position="inside">
                 <div class="app_settings_block" data-string="Monta" string="Monta">
