--- a/views/sale_order_views.xml
+++ b/views/sale_order_views.xml
@@ -11,6 +11,9 @@
                     <field name="monta_status" readonly="1"/>
                     <field name="monta_reference" readonly="1"/>
                     <field name="monta_delivery_date" readonly="1"/>
+                    <field name="monta_tracking_url" readonly="1"/>
+                    <field name="monta_webshop_order_id" readonly="1"/>
+                    <field name="monta_remote_order_id" readonly="1"/>
                     <button name="action_push_to_monta" type="object" string="Push to Monta" class="oe_highlight"/>
                 </group>
             </xpath>
