--- a/views/sale_order_views.xml
+++ b/views/sale_order_views.xml
@@ -1,11 +1,11 @@
-
 <odoo>
     <record id="view_order_form_monta" model="ir.ui.view">
         <field name="name">sale.order.form.monta</field>
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//sheet/notebook/page[@name='order_lines']" position="after">
+            <!-- robust: inject a new group at the end of the sheet -->
+            <xpath expr="//sheet" position="inside">
                 <group string="Monta">
                     <field name="monta_order_id" readonly="1"/>
                     <field name="monta_status" readonly="1"/>
