--- a/views/monta_order_status_views.xml
+++ b/views/monta_order_status_views.xml
@@ -2,25 +2,29 @@
 <odoo>
   <data>
 
+    <!-- List (tree) view -->
     <record id="view_monta_order_status_list" model="ir.ui.view">
       <field name="name">monta.order.status.list</field>
       <field name="model">monta.order.status</field>
       <field name="arch" type="xml">
-        <!-- Enable delete (was delete="0"); keep create disabled -->
+        <!-- Enable delete; keep create disabled -->
         <list string="Monta Orders" create="0" delete="1" default_order="last_sync desc">
           <field name="order_name"/>
           <field name="sale_order_id"/>
+          <field name="webshop_order_id"/>
           <field name="status"/>
           <field name="status_code"/>
           <field name="source"/>
           <field name="monta_order_ref"/>
-          <field name="track_trace" widget="url"/>
+          <field name="track_trace_code" string="T&amp;T Code"/>
+          <field name="track_trace_url" string="T&amp;T Link" widget="url"/>
           <field name="delivery_date"/>
           <field name="last_sync"/>
         </list>
       </field>
     </record>
 
+    <!-- Form view -->
     <record id="view_monta_order_status_form" model="ir.ui.view">
       <field name="name">monta.order.status.form</field>
       <field name="model">monta.order.status</field>
@@ -31,6 +35,7 @@
               <group>
                 <field name="order_name" readonly="1"/>
                 <field name="sale_order_id" readonly="1"/>
+                <field name="webshop_order_id" readonly="1"/>
                 <field name="monta_order_ref" readonly="1"/>
                 <field name="source" readonly="1"/>
               </group>
@@ -41,16 +46,25 @@
                 <field name="last_sync" readonly="1"/>
               </group>
             </group>
-            <group>
+
+            <group string="Track &amp; Trace">
+              <field name="track_trace_code" string="T&amp;T Code" readonly="1"/>
+              <field name="track_trace_url" string="T&amp;T Link" widget="url" readonly="1"/>
+            </group>
+
+            <group string="Messages">
               <field name="delivery_message" readonly="1"/>
-              <field name="track_trace" widget="url" readonly="1"/>
-              <field name="status_raw" widget="text" readonly="1" invisible="1"/>
+            </group>
+
+            <group string="Raw" attrs="{'invisible': [('status_raw','=',False)]}">
+              <field name="status_raw" widget="text" readonly="1"/>
             </group>
           </sheet>
         </form>
       </field>
     </record>
 
+    <!-- Search view -->
     <record id="view_monta_order_status_search" model="ir.ui.view">
       <field name="name">monta.order.status.search</field>
       <field name="model">monta.order.status</field>
@@ -58,12 +72,19 @@
         <search string="Search Monta Orders">
           <field name="order_name"/>
           <field name="sale_order_id"/>
+          <field name="webshop_order_id"/>
           <field name="status"/>
           <field name="status_code"/>
           <field name="source"/>
           <field name="monta_order_ref"/>
-          <field name="track_trace"/>
-          <filter string="On Monta" name="has_monta_ref" domain="[('monta_order_ref','!=',False)]"/>
+          <field name="track_trace_code"/>
+          <field name="track_trace_url"/>
+
+          <filter string="Has Track &amp; Trace" name="has_ttn"
+                  domain="[('track_trace_url','!=',False)]"/>
+          <filter string="On Monta" name="has_monta_ref"
+                  domain="[('monta_order_ref','!=',False)]"/>
+
           <group expand="0" string="Group By">
             <filter string="Sale Order" name="grp_so" context="{'group_by':'sale_order_id'}"/>
             <filter string="Status" name="grp_status" context="{'group_by':'status'}"/>
@@ -74,6 +95,7 @@
       </field>
     </record>
 
+    <!-- Action -->
     <record id="action_monta_order_status" model="ir.actions.act_window">
       <field name="name">Monta Orders</field>
       <field name="res_model">monta.order.status</field>
@@ -85,6 +107,7 @@
       <field name="search_view_id" ref="view_monta_order_status_search"/>
     </record>
 
+    <!-- Menu -->
     <menuitem id="menu_monta_root" name="Monta" sequence="90" groups="base.group_user"/>
     <menuitem id="menu_monta_order_status" name="Order Status"
               parent="menu_monta_root" action="action_monta_order_status"
